Sorting and filtering in shortcircuit results (#77)
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>